schedule e2e tests
